GNOME Bugzilla – Bug 663601
Possibly passing NULL to g_str_has_prefix() in default_log_handler()
Last modified: 2013-02-22 10:02:28 UTC
In src/main.c, a log message handler is registered. When called, the argument log_domain could be NULL (which is G_LOG_DOMAIN). And the if statement inside just assume it to be non-NULL. Thus assertion fails.
Created attachment 237033 [details] [review] main: Guard against NULL log_domain in default handler g_str_has_prefix() will assert when passed NULL, so we need to make sure that we are passed a non-NULL log_domain first. Spotted by <goughost<at>yahoo.com.cn>
*** Bug 694353 has been marked as a duplicate of this bug. ***
Review of attachment 237033 [details] [review]: OK.
Attachment 237033 [details] pushed as acffd1e - main: Guard against NULL log_domain in default handler