src/main.c
@@ -284,7 +284,7 @@ default_log_handler (const char     *log_domain,
 
   /* Filter out telepathy-glib logs, we don't want to flood Shell's output
    * with those. */
-  if (!g_str_has_prefix (log_domain, "tp-glib"))
+  if (!log_domain || !g_str_has_prefix (log_domain, "tp-glib"))
     g_log_default_handler (log_domain, log_level, message, data);
 }
 
